Update to editor

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,12 @@
   }
 }
 
+.ProseMirror {
+  &h1 {
+    font-size: 34px;
+  }
+}
+
 * {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-tap-highlight-color: transparent;
